icons done in contact section. hide footer on small screens. `TODO:` fix image sizes on mobile for 'work history'

--- a/src/assets/scss/_formButton.scss
+++ b/src/assets/scss/_formButton.scss
@@ -2,7 +2,7 @@
 
 .form button {
   position: relative;
-  top: 5rem;
+  top: 4.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
