--- a/src/assets/scss/_formStyles.scss
+++ b/src/assets/scss/_formStyles.scss
@@ -4,7 +4,7 @@
   background: var(--black-purple-radial-gradient);
   border-radius: 20px;
   box-sizing: border-box;
-  height: 500px;
+  height: 520px;
   padding: 20px;
   filter: 
   drop-shadow(0px 4px 4px #ffffff80)
